// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  data-testid="signUp-container"
>
  <div
    role="banner"
  >
    <Localized
      elems={
        Object {
          "subtitle": <div
            className="coral coral-login-header SignUp-header"
          />,
          "title": <div
            className="coral coral-login-title SignUp-title"
          />,
        }
      }
      id="signUp-signUpToJoinHeader"
    >
      <div
        className="coral coral-login-bar SignUp-bar"
      >
        <div
          className="coral coral-login-title SignUp-title"
        >
          Sign Up
        </div>
        <div
          className="coral coral-login-header SignUp-header"
        >
          to join the conversation
        </div>
      </div>
    </Localized>
  </div>
  <SignInWithLocalHeader
    onSignIn={[Function]}
  />
  <Main
    data-testid="signUp-main"
  >
    <withContext(createMutationContainer(SignUpContainer)) />
    <OrSeparator />
    <ForwardRef(forwardRef)>
      <Relay(SignUpWithFacebookContainer)
        auth={Object {}}
      />
      <Relay(SignUpWithGoogleContainer)
        auth={Object {}}
      />
      <Relay(SignUpWithOIDCContainer)
        auth={Object {}}
      />
    </ForwardRef(forwardRef)>
  </Main>
</div>
`;

exports[`renders without email sign up 1`] = `
<div
  data-testid="signUp-container"
>
  <div
    role="banner"
  >
    <Localized
      elems={
        Object {
          "subtitle": <div
            className="coral coral-login-header SignUp-header"
          />,
          "title": <div
            className="coral coral-login-title SignUp-title"
          />,
        }
      }
      id="signUp-signUpToJoinHeader"
    >
      <div
        className="coral coral-login-bar SignUp-bar"
      >
        <div
          className="coral coral-login-title SignUp-title"
        >
          Sign Up
        </div>
        <div
          className="coral coral-login-header SignUp-header"
        >
          to join the conversation
        </div>
      </div>
    </Localized>
  </div>
  <Main
    data-testid="signUp-main"
  >
    <ForwardRef(forwardRef)>
      <Relay(SignUpWithFacebookContainer)
        auth={Object {}}
      />
      <Relay(SignUpWithGoogleContainer)
        auth={Object {}}
      />
      <Relay(SignUpWithOIDCContainer)
        auth={Object {}}
      />
    </ForwardRef(forwardRef)>
  </Main>
</div>
`;
